--- a/css/styles.css
+++ b/css/styles.css
@@ -94,11 +94,11 @@ body {
 }
 
 hr {
-  margin: 1rem 0;
+  margin: 2rem 0;
   color: inherit;
   background-color: currentColor;
-  border: 0;
-  opacity: 0.25;
+  border: 1px solid black;
+  opacity: 1;
 }
 
 hr:not([size]) {
@@ -11701,3 +11701,141 @@ body {
 
 /* Custom CSS */
 
+.video-container {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 15px;
+  align-items: flex-start;
+  padding: 5px 5%;
+}
+
+.video-container .main-video {
+  background: #fff;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.video-container .main-video video {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.video-container .main-video .title {
+  color: #333;
+  font-size: 23px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.video-container .video-list {
+  background: #fff;
+  border-radius: 5px;
+  height: 520px;
+  overflow-y: scroll;
+}
+
+.video-container .video-list::-webkit-scrollbar {
+  width: 7px;
+}
+
+.video-container .video-list::-webkit-scrollbar-track {
+  background: #ccc;
+  border-radius: 50px;
+}
+
+.video-container .video-list::-webkit-scrollbar-thumb {
+  background: #666;
+  border-radius: 50px;
+}
+
+.video-container .video-list .vid video {
+  width: 100px;
+  border-radius: 5px;
+}
+
+.video-container .video-list .vid {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  background: #f7f7f7;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid rgba(0,0,0,.1);
+  cursor: pointer;
+}
+
+.video-container .video-list .vid:hover {
+  background: #eee;
+}
+
+.video-container .video-list .vid.active {
+  background: #64a19d;
+}
+
+.video-container .video-list .vid.active .title {
+  color: #fff;
+}
+
+.video-container .video-list .vid .title {
+  color: #333;
+  font-size: 17px;
+}
+
+@media (max-width: 991px) {
+  .video-container {
+      grid-template-columns: 1.5fr 1fr;
+      padding: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  .video-container {
+      grid-template-columns: 1fr;
+      padding: 10px;
+  }
+}
+
+/* Intro Video Pop up */
+
+.intro-video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: rgba(255, 122, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s;
+}
+
+.intro-video-container .video-intro-close {
+  position: absolute;
+  top: 10%;
+  right: 25px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.intro-video-container video {
+  width: 90%;
+  max-width: 800px;
+  transform: scale(0);
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+  outline: none;
+  transition: all 0.3s;
+}
+
+.intro-video-container.show {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.intro-video-container.show video {
+  transform: scale(1);
+}
